@@ -81,7 +81,7 @@ ActionController::Routing::Routes.draw do |map|
   map.connect "notes/:nums", :controller => "notes", 
   :action => "parse_nums",
   :requirements => { 
-    :nums => /(\d|-)+/
+    :nums => /^(\d|-)+/
   }
 
   map.connect "notes/:nums", :controller => "notes", 
