@@ -1,3 +1,9 @@
+2006-08-02  ARAKI Yasuhiro  <yasu@debian.or.jp>
+
+	* donrails/test/functional/notes_controller_test.rb (NotesControllerTest::test_indexabc): Add to test this fix.
+
+	* donrails/app/controllers/notes_controller.rb (NotesController::indexabc): Fix for parameter parse.
+
 2006-08-02  Akira TAGOH  <at@gclab.org>
 
 	* donrails/tool/plugin-setup.rb: add --force option for installer.
